# colibrigui

./: .clang-format  .gitignore  .gitmodules  .hgignore  .hgrc  CMakeLists.txt  LICENSE  Readme.md
Assets/Skins/: Arrow.xcf  Atlas.xcf  Background.xcf  Button.xcf  Button_pushed.xcf  Checkbox.xcf  ProgressBar_l0.xcf  ProgressBar_l1.xcf
CMake/: Bootstrap.cmake  Examples.cmake
CMake/Dependencies/: OGRE.cmake
CMake/Templates/: Resources.cfg.in
Dependencies/: CMakeLists.txt
Dependencies/MSVC_Fix/: stdint.h
Dependencies/MSVC_Fix/2012/: math_round.h
Dependencies/freetype2/: CMakeLists.txt
Dependencies/freetype2/devel/: ftoption.h
Dependencies/freetype2/include/freetype/config/: ftoption.h
Dependencies/harfbuzz/: CMakeLists.txt
Dependencies/harfbuzz/src/: hb-private.hh
Dependencies/icu/: APIChangeReport.html  CMakeLists.txt  LICENSE  files  icu4c.css  license.html  readme.html
Dependencies/zlib/: CMakeLists.txt
Docs/: AndroidIntegration.md  Skins.json
Examples/Common/: ExamplesCommon.cpp  ExamplesCommon.h
Examples/MainDemo/: CMakeLists.txt  ColibriGui.cpp  ColibriGuiGameState.cpp  ColibriGuiGameState.h
Examples/OffScreenCanvas2D/: CMakeLists.txt  OffScreenCanvas2D.cpp  OffScreenCanvas2DGameState.cpp  OffScreenCanvas2DGameState.h
Examples/OffScreenCanvas3D/: CMakeLists.txt  OffScreenCanvas3D.cpp  OffScreenCanvas3DGameState.cpp  OffScreenCanvas3DGameState.h
include/: ColibriGuiGameState.h  CrystalGuiGameState.h
include/ColibriGui/: .clang-format  ColibriAssert.h  ColibriButton.h  ColibriCheckbox.h  ColibriCustomShape.h  ColibriEditbox.h  ColibriGraphChart.h  ColibriGuiPrerequisites.h  ColibriLabel.h  ColibriLabelBmp.h  ColibriManager.h  ColibriOffScreenCanvas.h  ColibriProgressbar.h  ColibriRadarChart.h  ColibriRenderable.h  ColibriSkinManager.h  ColibriSlider.h  ColibriSpinner.h  ColibriToggleButton.h  ColibriWidget.h  ColibriWindow.h
include/ColibriGui/Layouts/: ColibriLayoutBase.h  ColibriLayoutCell.h  ColibriLayoutLine.h  ColibriLayoutMultiline.h  ColibriLayoutTableSameSize.h
include/ColibriGui/MiniEngine/: ColibriMeBuffer.h  ColibriMeBufferManager.h  ColibriMeRenderable.h  ColibriMeVertexArrayObject.h  ColibriMeVertexBuffer.h  ColibriMiniEnginePrerequisites.h
include/ColibriGui/Ogre/: ColibriOgreRenderable.h  CompositorPassColibriGui.h  CompositorPassColibriGuiDef.h  CompositorPassColibriGuiProvider.h  OgreHlmsColibri.h  OgreHlmsColibriDatablock.h
include/ColibriGui/Text/: ColibriBmpFont.h  ColibriShaper.h  ColibriShaperManager.h
include/ColibriGui/iOS/: Colibri_iOS.h
include/CrystalGui/: CrystalAssert.h  CrystalButton.h  CrystalCheckbox.h  CrystalGuiPrerequisites.h  CrystalLabel.h  CrystalManager.h  CrystalRenderable.h  CrystalSkinManager.h  CrystalSpinner.h  CrystalWidget.h  CrystalWindow.h
include/CrystalGui/Ogre/: CompositorPassCrystalGui.h  CompositorPassCrystalGuiDef.h  CompositorPassCrystalGuiProvider.h  CrystalOgreRenderable.h  OgreHlmsCrystal.h  OgreHlmsCrystalDatablock.h
include/CrystalGui/Text/: CrystalShaper.h  CrystalShaperManager.h
src/: ColibriGui.cpp  ColibriGuiGameState.cpp  CrystalGui.cpp  CrystalGuiGameState.cpp  CrystalGuiProject.cpp  CrystalGuiProjectGameState.cpp
src/Android/com/colibri/: TextInputActivity.kt
src/ColibriGui/: ColibriAssert.cpp  ColibriButton.cpp  ColibriCheckbox.cpp  ColibriCustomShape.cpp  ColibriEditbox.cpp  ColibriGraphChart.cpp  ColibriLabel.cpp  ColibriLabelBmp.cpp  ColibriManager.cpp  ColibriOffScreenCanvas.cpp  ColibriProgressbar.cpp  ColibriRadarChart.cpp  ColibriRenderable.cpp  ColibriRenderable.inl  ColibriSkinManager.cpp  ColibriSlider.cpp  ColibriSpinner.cpp  ColibriToggleButton.cpp  ColibriWidget.cpp  ColibriWindow.cpp
src/ColibriGui/Layouts/: ColibriLayoutBase.cpp  ColibriLayoutCell.cpp  ColibriLayoutLine.cpp  ColibriLayoutMultiline.cpp  ColibriLayoutTableSameSize.cpp
src/ColibriGui/MiniEngine/: ColibriMeRenderable.cpp
src/ColibriGui/Ogre/: ColibriOgreRenderable.cpp  CompositorPassColibriGui.cpp  CompositorPassColibriGuiProvider.cpp  OgreHlmsColibri.cpp
src/ColibriGui/Text/: AndroidFreeTypeApk.inc  ColibriBmpFont.cpp  ColibriShaper.cpp  ColibriShaperManager.cpp
src/ColibriGui/iOS/: Colibri_iOS.mm
src/CrystalGui/: CrystalAssert.cpp  CrystalButton.cpp  CrystalCheckbox.cpp  CrystalLabel.cpp  CrystalManager.cpp  CrystalRenderable.cpp  CrystalRenderable.inl  CrystalSkinManager.cpp  CrystalSpinner.cpp  CrystalWidget.cpp  CrystalWindow.cpp
src/CrystalGui/Ogre/: CompositorPassCrystalGui.cpp  CompositorPassCrystalGuiProvider.cpp  CrystalOgreRenderable.cpp  OgreHlmsCrystal.cpp
src/CrystalGui/Text/: CrystalShaper.cpp  CrystalShaperManager.cpp
