cmake_minimum_required(VERSION 3.5)

## ICU-common ##
################
add_library( icucommon
	common/appendable.cpp
	common/bmpset.cpp
	common/brkeng.cpp
	common/brkiter.cpp
	common/bytestream.cpp
	common/bytestriebuilder.cpp
	common/bytestrie.cpp
	common/bytestrieiterator.cpp
	common/caniter.cpp
	common/chariter.cpp
	common/charstr.cpp
	common/cmemory.c
	common/cstr.cpp
	common/cstring.c
	common/cwchar.c
	common/dictbe.cpp
	common/dictionarydata.cpp
	common/dtintrv.cpp
	common/errorcode.cpp
	common/filteredbrk.cpp
	common/filterednormalizer2.cpp
	common/icudataver.c
	common/icuplug.cpp
	common/listformatter.cpp
	common/loadednormalizer2impl.cpp
	common/locavailable.cpp
	common/locbased.cpp
	common/locdispnames.cpp
	common/locdspnm.cpp
	common/locid.cpp
	common/loclikely.cpp
	common/locmap.c
	common/locresdata.cpp
	common/locutil.cpp
	common/messagepattern.cpp
	common/normalizer2.cpp
	common/normalizer2impl.cpp
	common/normlzr.cpp
	common/parsepos.cpp
	common/patternprops.cpp
	common/pluralmap.cpp
	common/propname.cpp
	common/propsvec.c
	common/punycode.cpp
	common/putil.cpp
	common/rbbi.cpp
	common/rbbidata.cpp
	common/rbbinode.cpp
	common/rbbirb.cpp
	common/rbbiscan.cpp
	common/rbbisetb.cpp
	common/rbbistbl.cpp
	common/rbbitblb.cpp
	common/resbund_cnv.cpp
	common/resbund.cpp
	common/resource.cpp
	common/ruleiter.cpp
	common/schriter.cpp
	common/serv.cpp
	common/servlk.cpp
	common/servlkf.cpp
	common/servls.cpp
	common/servnotf.cpp
	common/servrbf.cpp
	common/servslkf.cpp
	common/sharedobject.cpp
	common/simpleformatter.cpp
	common/stringpiece.cpp
	common/stringtriebuilder.cpp
	common/uarrsort.c
	common/ubidi.c
	common/ubidiln.c
	common/ubidi_props.c
	common/ubiditransform.c
	common/ubidiwrt.c
	common/ubrk.cpp
	common/ucase.cpp
	common/ucasemap.cpp
	common/ucasemap_titlecase_brkiter.cpp
	common/ucat.c
	common/uchar.c
	common/ucharstriebuilder.cpp
	common/ucharstrie.cpp
	common/ucharstrieiterator.cpp
	common/uchriter.cpp
	common/ucln_cmn.cpp
	common/ucmndata.c
	common/ucnv2022.cpp
	common/ucnv_bld.cpp
	common/ucnvbocu.cpp
	common/ucnv.c
	common/ucnv_cb.c
	common/ucnv_cnv.c
	common/ucnv_ct.c
	common/ucnvdisp.c
	common/ucnv_err.c
	common/ucnv_ext.cpp
	common/ucnvhz.c
	common/ucnv_io.cpp
	common/ucnvisci.c
	common/ucnvlat1.c
	common/ucnv_lmb.c
	common/ucnvmbcs.cpp
	common/ucnvscsu.c
	common/ucnvsel.cpp
	common/ucnv_set.c
	common/ucnv_u16.c
	common/ucnv_u32.c
	common/ucnv_u7.c
	common/ucnv_u8.c
	common/ucol_swp.cpp
	common/ucurr.cpp
	common/udata.cpp
	common/udatamem.c
	common/udataswp.c
	common/uenum.c
	common/uhash.c
	common/uhash_us.cpp
	common/uidna.cpp
	common/uinit.cpp
	common/uinvchar.c
	common/uiter.cpp
	common/ulist.c
	common/ulistformatter.cpp
	common/uloc.cpp
	common/uloc_keytype.cpp
	common/uloc_tag.c
	common/umapfile.c
	common/umath.c
	common/umutex.cpp
	common/unames.cpp
	common/unifiedcache.cpp
	common/unifilt.cpp
	common/unifunct.cpp
	common/uniset_closure.cpp
	common/uniset.cpp
	common/uniset_props.cpp
	common/unisetspan.cpp
	common/unistr_case.cpp
	common/unistr_case_locale.cpp
	common/unistr_cnv.cpp
	common/unistr.cpp
	common/unistr_props.cpp
	common/unistr_titlecase_brkiter.cpp
	common/unormcmp.cpp
	common/unorm.cpp
	common/uobject.cpp
	common/uprops.cpp
	common/uresbund.cpp
	common/ures_cnv.c
	common/uresdata.cpp
	common/usc_impl.c
	common/uscript.c
	common/uscript_props.cpp
	common/uset.cpp
	common/usetiter.cpp
	common/uset_props.cpp
	common/ushape.cpp
	common/usprep.cpp
	common/ustack.cpp
	common/ustrcase.cpp
	common/ustrcase_locale.cpp
	common/ustr_cnv.cpp
	common/ustrenum.cpp
	common/ustrfmt.c
	common/ustring.cpp
	common/ustr_titlecase_brkiter.cpp
	common/ustrtrns.cpp
	common/ustr_wcs.cpp
	common/utext.cpp
	common/utf_impl.c
	common/util.cpp
	common/util_props.cpp
	common/utrace.c
	common/utrie2_builder.cpp
	common/utrie2.cpp
	common/utrie.cpp
	common/uts46.cpp
	common/utypes.c
	common/uvector.cpp
	common/uvectr32.cpp
	common/uvectr64.cpp
	common/wintz.c
	stubdata/stubdata.c
)

target_include_directories( icucommon PUBLIC
	${CMAKE_CURRENT_SOURCE_DIR}/common
	${CMAKE_CURRENT_SOURCE_DIR}/stubdata
	${CMAKE_CURRENT_SOURCE_DIR}/common/unicode
)
target_compile_definitions( icucommon PUBLIC
	-DU_STATIC_IMPLEMENTATION=1
	#-DICU_DATA_DIR_PREFIX_ENV_VAR="ANDROID_ROOT"
	-DPIC
	-DU_COMMON_IMPLEMENTATION
	#-DU_HAVE_NL_LANGINFO_CODESET=0
	#-DU_TIMEZONE=0
	#-DUCONFIG_NO_TRANSLITERATION=1
	-DU_CHARSET_IS_UTF8=1
)
if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
	target_compile_options( icucommon PRIVATE -wd4267 -wd4244 )
endif()
